--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-base64": "^0.2.1",
+    "react-native-ble-plx": "^2.0.2",
+    "react-native-bluetooth-serial": "^1.0.0-rc1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
