--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "prop-types": "^15.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-waveview": "^1.1.0",
     "react-native-web": "^0.17.5",
     "styled-components": "^5.3.1"
   },
