--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/native": "^6.0.5",
     "@react-navigation/stack": "^6.0.10",
     "expo": "~42.0.1",
+    "expo-constants": "^12.1.3",
+    "expo-notifications": "^0.13.3",
     "expo-status-bar": "~1.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
